# ros2_ws

./: .gitattributes  .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mata/lib/mata/: video_masking_node
install/mata/share/mata/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mata/share/mata/cmake/: mataConfig.cmake
log/: latest_build
src/BT/src/: check_key  check_key.cpp  run_bt
src/controller/: package.xml
src/controller/src/: node.cpp
src/install/: local_setup.sh  setup.sh
src/interfaces/: package.xml
src/log/: latest_build
src/mata/: CMakeLists.txt
src/mata/src/: main  main.cpp
src/mata/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/mata/src/log/: latest_build
